--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,2 +1,5 @@
 <%- include('./partials/header.ejs') -%>
-<h1>Hello World</h1>
+<%- include('./partials/searchBar.ejs') -%>
+<div class="container-fluid">
+  <h1>Hello World</h1>
+</div>
