add product routes and create product schema

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,5 @@
 <%- include('./partials/header.ejs') -%>
+<%- include('./partials/messages.ejs') -%>
 <%- include('./partials/searchBar.ejs') -%>
 <div class="container-fluid">
   <h1>Hello World</h1>
