--- a/views/partials/messages.ejs
+++ b/views/partials/messages.ejs
@@ -13,3 +13,12 @@
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
   </div>
 <% } %>
+
+<% if (messages.info) { %>
+  <div class="alert alert-info alert-dismissible fade show" role="alert">
+    <p>
+      <%= messages.info %>
+    </p>
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  </div>
+<% } %>
