--- a/views/products/new.ejs
+++ b/views/products/new.ejs
@@ -21,7 +21,7 @@
     >
     <textarea name="description" cols="30" rows="10" class="form-control mt-3" placeholder="Product Description"><%= typeof(description) !=='undefined' ? description : '' %></textarea>
     <input type="file" name="imageLink" placeholder="Choose a picture" class="mt-3 filepond" />
-    <div class="d-flex align-items-center justifly-content-end gap-3">
+    <div class="d-flex align-items-center justifly-content-end gap-3 mb-3">
       <input type="submit" value="Add Product" class="btn btn-success mt-3">
       <a href="/" class="btn btn-warning mt-3">Back</a>
     </div>
