--- a/views/cart/cart.ejs
+++ b/views/cart/cart.ejs
@@ -1,3 +1,53 @@
 <%- include('../partials/header.ejs') -%>
 <%- include('../partials/messages.ejs') -%>
-<h2>Cart</h2>
+<link rel="stylesheet" href="css/cart.css">
+
+<div class="m-5">
+	<div class="container-fluid">
+		<div class="col-container">
+			<div class="col col-lg" id="cart-items-container">
+				<% cart.cartItems.forEach(cartItem => { %>
+					<div class="item">
+						<div class="item-img">
+							<img class="img" src="<%= cartItem.image %>" alt="">
+						</div>
+						<div class="details">
+							<div class="box">
+								<h4><%= cartItem.name.slice(0, 25) + "..." %></h4>
+								<p class="price"><strong>₹<%= cartItem.price %></strong></p>
+							</div>
+							<div class="box">
+								<input type="number" min="1" max="10" value="<%= cartItem.quantity %>" class="number">
+								<button class="btn btn-sm btn-danger remove-btn">Remove</button>
+							</div>
+						</div>
+					</div>
+				<% }) %>
+			</div>
+			<div class="col col-md">
+				<div class="checkout-price-container">
+					<div class="center border-bottom-1px-gray">
+						<h3 class="text-center">Checkout Details</h3>
+					</div>
+					<div class="border-bottom-1px-gray">
+						<div class="fields">
+							<p>Total Price:</p>
+							<p id="total-price-value">₹<%= cart.totalPrice %></p>
+						</div>
+						<div class="fields">
+							<p>Discount:</p>
+							<p class="text-success" id="discount-value">-₹0</p>
+						</div>
+					</div>
+					<div class="fields border-bottom-1px-gray">
+						<b>Grand Total:</b>
+						<b id="grand-total-value">₹<%= cart.totalPrice %></b>
+					</div>
+					<div class="d-grid mt-3 mb-3">
+						<button class="btn btn-success">Checkout</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
