--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="css/app.css">
   <title>Ecom Application</title>
 </head>
-<body>
+<body class="bg-light">
   <%- body -%>
   <!-- Filepond scripts -->
   <script src="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.js"></script>
