--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -78,6 +78,31 @@
 	justify-content: space-around;
 }
 
+.counter-btn {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 0;
+	height: 20px;
+	width: 20px;
+	border-radius: 50%;
+	border: none;
+	color: white;
+	background: gray;
+	font-size: large;
+}
+
+.value-container {
+	padding: 5px;
+	border: 1px solid gray;
+	height: 20px;
+	width: 20px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin: 0 3px 0 3px;
+}
+
 @media (max-width: 768px) {
 	.row {
 		display: grid;
